# ComfyUI-zw-tools

./: .gitignore  NodeZwTools.py  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
conf/: params.json
db_tool/: zw_flow_record_biz.py  zw_flow_record_dao.py  zw_local_file_biz.py  zw_local_file_dao.py  zw_params_biz.py  zw_params_dao.py  zw_tags_biz.py  zw_tags_cate_biz.py  zw_tags_cate_dao.py  zw_tags_dao.py
entry/: entry.js
tags/: 1.整体环境.json  2.人物.json  3.服装.json  4.姿势.json  5.物品风景.json  6.中国风.json  提示词整理.xlsx
trans_tool/: baidu.py
ui/: drag_test.html  image_browser_example.html  node_prompt_example.html  tags_example.html  upload_panel_example.html
ui/css/: zw.css
ui/js/: image-browser.js  jquery.min.js  node-prompt.js  tags.js  upload-panel.js
