[project]
name = "zw-tools"
description = "Automatic prompt translation to Chinese, custom prompt management, AI-based prompt expansion and translation, AI-generated image/video record management (file browser), and cloud storage upload management."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/zzw5516/ComfyUI-zw-tools"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-zw-tools"
Icon = ""
